--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
+<script src="form.js"></script>
+<script src="game.js"></script>
+<script src="player.js"></script>
     <meta charset="utf-8" />
 
   </head>
+
   <body>
       <script src="sketch.js"></script>
+
   </body>
 </html>
